// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Amount /> should render Amount with default props 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="100"
      font-weight="regular"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render amount with Humanize value 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="400"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="700"
      font-weight="bold"
    >
      1k
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-medium size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="100"
      font-weight="regular"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-medium-bold size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="100"
      font-weight="bold"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-small size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render body-small-bold size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="75"
      font-weight="bold"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render heading-large size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="100"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="400"
      font-weight="regular"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="100"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render heading-large-bold size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="100"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="400"
      font-weight="bold"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="100"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render heading-small size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="200"
      font-weight="regular"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render heading-small-bold size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="200"
      font-weight="bold"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render negative intent Amount  1`] = `
.c1 {
  color: hsla(8,73%,47%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="feedback.text.negative.lowContrast"
        font-size="100"
        font-weight="regular"
      >
        ₹
      </div>
    </div>
    <div
      class="c1"
      color="feedback.text.negative.lowContrast"
      font-size="100"
      font-weight="regular"
    >
      1,000
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render positive intent Amount  1`] = `
.c1 {
  color: hsla(160,100%,26%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(160,100%,26%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(160,100%,26%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="feedback.text.positive.lowContrast"
        font-size="75"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="feedback.text.positive.lowContrast"
      font-size="100"
      font-weight="regular"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="feedback.text.positive.lowContrast"
      font-size="75"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render title-medium size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="400"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="700"
      font-weight="bold"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="400"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;

exports[`<Amount /> should render title-small size Amount 1`] = `
.c1 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.125rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5625rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  margin-right: 2px;
  margin-left: 2px;
}

.c3 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.125rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-right: 4px;
  padding-left: 4px;
}

<div>
  <div
    class="c0"
    data-blade-component="amount"
    display="flex"
  >
    <div
      class=""
    >
      <div
        class="c1"
        color="surface.text.muted.lowContrast"
        font-size="300"
        font-weight="bold"
      >
        ₹
      </div>
    </div>
    <div
      class="c2"
      color="surface.text.normal.lowContrast"
      font-size="600"
      font-weight="bold"
    >
      1,000
      .
    </div>
    <div
      class="c3"
      color="surface.text.muted.lowContrast"
      font-size="300"
      font-weight="regular"
    >
      00
    </div>
  </div>
</div>
`;
